<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingBottom="24dp"
    android:paddingTop="80dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginBottom="48dp" />

    <Button
        android:id="@+id/btn_play"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btn_record"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/record"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btn_setting"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/setting" />

</LinearLayout>
